--- a/k8sdeployment.yml
+++ b/k8sdeployment.yml
@@ -42,40 +42,40 @@ spec:
       targetPort: 8080
   selector:
     k8s-app: estuary-discovery
----
-kind: Deployment
-apiVersion: apps/v1
-metadata:
-  labels:
-    k8s-app: netflixoss-eureka
-  name: netflixoss-eureka
-  namespace: default
-spec:
-  replicas: 1
-  revisionHistoryLimit: 10
-  selector:
-    matchLabels:
-      k8s-app: netflixoss-eureka
-  template:
-    metadata:
-      labels:
-        k8s-app: netflixoss-eureka
-    spec:
-      containers:
-        - name: netflixoss-eureka
-          image: netflixoss/eureka:1.3.1
----
-kind: Service
-apiVersion: v1
-metadata:
-  labels:
-    k8s-app: netflixoss-eureka
-  name: netflixoss-eureka
-  namespace: default
-spec:
-  type: NodePort
-  ports:
-    - port: 8080
-      targetPort: 8080
-  selector:
-    k8s-app: netflixoss-eureka
+#---
+#kind: Deployment
+#apiVersion: apps/v1
+#metadata:
+#  labels:
+#    k8s-app: netflixoss-eureka
+#  name: netflixoss-eureka
+#  namespace: default
+#spec:
+#  replicas: 1
+#  revisionHistoryLimit: 10
+#  selector:
+#    matchLabels:
+#      k8s-app: netflixoss-eureka
+#  template:
+#    metadata:
+#      labels:
+#        k8s-app: netflixoss-eureka
+#    spec:
+#      containers:
+#        - name: netflixoss-eureka
+#          image: netflixoss/eureka:1.3.1
+#---
+#kind: Service
+#apiVersion: v1
+#metadata:
+#  labels:
+#    k8s-app: netflixoss-eureka
+#  name: netflixoss-eureka
+#  namespace: default
+#spec:
+#  type: NodePort
+#  ports:
+#    - port: 8080
+#      targetPort: 8080
+#  selector:
+#    k8s-app: netflixoss-eureka
