--- a/k8sdeployment.yml
+++ b/k8sdeployment.yml
@@ -19,6 +19,7 @@ spec:
       containers:
         - name: estuary-discovery
           image: dinutac/estuary-discovery:latest
+#          imagePullPolicy: Never
           command: ["bash", "-c", "sleep 30 && /home/dev/scripts/main_flask.py"] #wait until eureka up
           env:
             - name: EUREKA_SERVER
