--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,23 +6,23 @@ services:
     image: dinutac/estuary-discovery:latest
     hostname: estuary-discovery
 #    entrypoint: tail -f /etc/alpine-release
-    command: bash -c "/home/dev/scripts/wait-for-it.sh -t 20 10.133.14.238:8080 -- echo \"eureka running\" && python3 /home/dev/scripts/main_flask.py"
+    command: bash -c "/home/dev/scripts/wait-for-it.sh -t 20 eureka-server:8080 -- echo \"eureka running\" && sleep 10 && python3 /home/dev/scripts/main_flask.py"
     environment:
       limit: 'sky' #example env var inserted. you can read it with environ('limit') in your jinja2 template
-      EUREKA_SERVER: http://10.133.14.238:8080/eureka/v2 #your eureka server
-      APP_IP_PORT:  10.133.14.238:8081 #your app details: where it is and on which port. needed for service discovery and spread of tests from the test client
+      EUREKA_SERVER: http://eureka-server:8080/eureka/v2 #your eureka server
+      APP_IP_PORT: estuary-discovery:8080 #your app details: where it is and on which port. needed for service discovery and spread of tests from the test client
     ports:
-      - "8081:8080"
+      - "8080:8080"
 
     expose:
       - "8080"
 
 
-#  eureka-server:
-#    container_name: eureka-server
-#    image: netflixoss/eureka:1.3.1
-#    hostname: eureka-server
-##    ports:
-##      - "8081:8080"
-#    expose:
-#      - "8080"
+  eureka-server:
+    container_name: eureka-server
+    image: netflixoss/eureka:1.3.1
+    hostname: eureka-server
+#    ports:
+#      - "8081:8080"
+    expose:
+      - "8080"
