--- a/.travis.yml
+++ b/.travis.yml
@@ -43,8 +43,19 @@ script:
   - docker rm estuary-discovery
 
   #run eureka registration tests
+  - docker-compose pull
   - docker-compose up -d
-  - sleep 20
+  - sleep 45
+  - docker ps
+  #  - generate 2 deployments and 1 test run. estuary deployer has curl installed
+  - docker exec -ti estuarydiscovery_estuary-deployer_1 bash -c "curl -i http://estuary-deployer:8080/deploystart/alpine.yml/variables.yml"
+  - docker exec -ti estuarydiscovery_estuary-deployer_1 bash -c "curl -i http://estuary-deployer:8080/deploystart/alpine.yml/variables.yml"
+  - docker exec -ti estuarydiscovery_estuary-deployer_1 bash -c "
+    curl -i
+    --request POST 'http://estuary-testrunner:8080/teststart/100'
+    --header 'Accept:application/json'
+    --header 'Content-Type:text/plain'
+    --data 'sleep 3600'"
   - docker ps
   - docker exec estuary-discovery python3 -m unittest discover $DOCKER_SCRIPTS_DIR/tests/rest_eureka "*_test.py"
   - docker-compose down -v
