--- a/.travis.yml
+++ b/.travis.yml
@@ -54,6 +54,7 @@ script:
     --header 'Accept:application/json'
     --header 'Content-Type:text/plain'
     --data 'sleep 3600'"
+  - sleep 20 #wait until deployments are up and running
   - docker ps
   - docker exec estuary-discovery python3 -m unittest discover $DOCKER_SCRIPTS_DIR/tests/rest_eureka "*_test.py"
   - docker-compose down -v
