More eureka info about apps (#4)
* adding more infos about apps registered in eureka

* fixing tests

* changed from ip to ipAddr. What eureka object contains

* changed from ip to ipAddr. What eureka object contains

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,9 +40,9 @@ services:
       MAX_DEPLOYMENTS: 3 # how many deployments to be done. Useful for VMs where user knows how much resources a docker-compose env use.
       MAX_DEPLOY_MEMORY: 80 # % from total. tune this parameter after you measure how much a docker compose env consumes. E.g. 16 GB memory => docker will still compose new env if less than ~13.)
       #for eureka registering
-      EUREKA_SERVER: http://eureka-server:8080/eureka/v2 #your eureka server
+      EUREKA_SERVER: "http://eureka-server:8080/eureka/v2" #your eureka server
       #      APP_APPEND_ID: SR # this suffix will be added to the deployer service in order to differentiate between different services mapped on VM with specific resources
-      APP_IP_PORT: estuary-deployer:8080 #your app details: where it is and on which port. needed for service discovery and spread of tests from the test client
+      APP_IP_PORT: "estuary-deployer:8080" #your app details: where it is and on which port. needed for service discovery and spread of tests from the test client
     #    entrypoint: python3 /home/dev/scripts/main_flask.py
     command: bash -c "/home/dev/scripts/wait-for-it.sh eureka-server:8080 -- echo \"eureka running\" && sleep 45 && python3 /home/dev/scripts/main_flask.py"
     volumes:
