--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,7 +52,7 @@ services:
 
   eureka-server:
     container_name: eureka-server
-    image: netflixoss/eureka:1.3.1
+    image: dinutac/netflixoss-eureka:1.9.13
     hostname: eureka-server
 #    ports:
 #      - "8081:8080"
