--- a/k8sdeployment.yml
+++ b/k8sdeployment.yml
@@ -64,7 +64,7 @@ spec:
     spec:
       containers:
         - name: netflixoss-eureka
-          image: netflixoss/eureka:1.3.1
+          image: dinutac/netflixoss-eureka:1.9.13
 ---
 kind: Service
 apiVersion: v1
