--- a/.travis.yml
+++ b/.travis.yml
@@ -46,8 +46,8 @@ script:
   - sleep 60
   - docker ps
   #  - generate 2 deployments and 1 test run. estuary deployer has curl installed
-  - docker exec -ti estuary-discovery bash -c "curl -i http://estuary-deployer:8080/deploystart/alpine.yml/variables.yml"
-  - docker exec -ti estuary-discovery bash -c "curl -i http://estuary-deployer:8080/deploystart/alpine.yml/variables.yml"
+  - docker exec -ti estuary-discovery bash -c "curl -i http://estuary-deployer:8080/docker/deploystart/alpine.yml/variables.yml"
+  - docker exec -ti estuary-discovery bash -c "curl -i http://estuary-deployer:8080/docker/deploystart/alpine.yml/variables.yml"
   - docker exec -ti estuary-discovery bash -c "
     curl -i
     --request POST 'http://estuary-testrunner:8080/teststart/100'
