Get files / test results (#6)
* added new endpoint to get results across all test runners

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ script:
   - docker-compose pull
   - docker build -t dinutac/estuary-discovery:latest .
   - docker-compose up -d
-  - sleep 60
+  - sleep 70
   - docker ps
   #  - generate 2 deployments and 1 test run. estuary deployer has curl installed
   - docker exec -ti estuary-discovery bash -c "curl -i http://estuary-deployer:8080/docker/deploystart/alpine.yml/variables.yml"
@@ -51,6 +51,12 @@ script:
   - docker exec -ti estuary-discovery bash -c "
     curl -i
     --request POST 'http://estuary-testrunner:8080/teststart/100'
+    --header 'Accept:application/json'
+    --header 'Content-Type:text/plain'
+    --data 'sleep 3600'"
+  - docker exec -ti estuary-discovery bash -c "
+    curl -i
+    --request POST 'http://estuary-testrunner2:8080/teststart/200'
     --header 'Accept:application/json'
     --header 'Content-Type:text/plain'
     --data 'sleep 3600'"
