--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       EUREKA_SERVER: http://eureka-server:8080/eureka/v2 #your eureka server
       APP_IP_PORT: estuary-discovery:8080 #your app details: where it is and on which port. needed for service discovery and spread of tests from the test client
 #    ports:
-#      - "8080:8080"
+#      - "8092:8080"
 
     expose:
       - "8080"
@@ -28,6 +28,18 @@ services:
       limit: 'sky' #example env var inserted. you can read it with environ('limit') in your jinja2 template
       EUREKA_SERVER: http://eureka-server:8080/eureka/v2 #your eureka server
       APP_IP_PORT: estuary-testrunner:8080 #your app details: where it is and on which port. needed for service discovery and spread of tests from the test client
+    expose:
+      - "8080"
+
+  estuary-testrunner2:
+    image: dinutac/estuary-testrunner:latest
+    hostname: estuary-testrunner2
+    #    entrypoint: tail -f /etc/alpine-release
+    command: bash -c "/home/dev/scripts/wait-for-it.sh eureka-server:8080 -- echo \"eureka running\" && sleep 45 && python3 /home/dev/scripts/main_flask.py"
+    environment:
+      limit: 'sky' #example env var inserted. you can read it with environ('limit') in your jinja2 template
+      EUREKA_SERVER: http://eureka-server:8080/eureka/v2 #your eureka server
+      APP_IP_PORT: estuary-testrunner2:8080 #your app details: where it is and on which port. needed for service discovery and spread of tests from the test client
     expose:
       - "8080"
 
@@ -51,10 +63,9 @@ services:
       - "8080"
 
   eureka-server:
-    container_name: eureka-server
     image: dinutac/netflixoss-eureka:1.9.13
     hostname: eureka-server
 #    ports:
-#      - "8081:8080"
+#      - "8091:8080"
     expose:
       - "8080"
