--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
 #    entrypoint: tail -f /etc/alpine-release
     command: bash -c "/home/dev/scripts/wait-for-it.sh -t 20 eureka-server:8080 -- echo \"eureka running\" && sleep 45 && python3 /home/dev/scripts/main_flask.py"
     environment:
-      limit: 'sky' #example env var inserted. you can read it with environ('limit') in your jinja2 template
+#      FLUENTD_IP_PORT: 192.168.100.12:24224
       EUREKA_SERVER: http://eureka-server:8080/eureka/v2 #your eureka server
       APP_IP_PORT: estuary-discovery:8080 #your app details: where it is and on which port. needed for service discovery and spread of tests from the test client
 #    ports:
