--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: python
+dist: bionic
 
 python:
   - "3.7"
@@ -9,7 +10,7 @@ services:
 deploy:
   provider: releases
   api_key: $GITHUB_TOKEN
-  file: "main_flask"
+  file: "main_linux"
   skip_cleanup: true
   on:
     tags: true
@@ -76,10 +77,10 @@ script:
   #run self contained flask app tests
   - pyinstaller --onefile main_flask.py
   - ls -lrt dist
-  - cp dist/main_flask .
-  - chmod +x main_flask
+  - cp dist/main_flask main_linux
+  - chmod +x main_linux
   - sudo chown -R travis:travis inputs
-  - ./main_flask > /dev/null 2>&1 &
+  - ./main_linux > /dev/null 2>&1 &
   - ls -lrt
   - sleep 5
   #  - ./ngrok.sh
