--- a/.travis.yml
+++ b/.travis.yml
@@ -54,17 +54,17 @@ script:
   - sleep 70
   - docker ps
   #  - generate 2 deployments and 1 test run. estuary deployer has curl installed
-  - docker exec -ti estuary-discovery bash -c "curl -i http://estuary-deployer:8080/docker/deploystart/alpine.yml/variables.yml"
-  - docker exec -ti estuary-discovery bash -c "curl -i http://estuary-deployer:8080/docker/deploystart/alpine.yml/variables.yml"
+  - docker exec -ti estuary-discovery bash -c "curl -i --request POST http://estuary-deployer:8080/docker/deployments/alpine.yml/variables.yml"
+  - docker exec -ti estuary-discovery bash -c "curl -i --request POST http://estuary-deployer:8080/docker/deployments/alpine.yml/variables.yml"
   - docker exec -ti estuary-discovery bash -c "
     curl -i
-    --request POST 'http://estuary-testrunner:8080/teststart/100'
+    --request POST 'http://estuary-testrunner:8080/test/100'
     --header 'Accept:application/json'
     --header 'Content-Type:text/plain'
     --data 'sleep 3600'"
   - docker exec -ti estuary-discovery bash -c "
     curl -i
-    --request POST 'http://estuary-testrunner2:8080/teststart/200'
+    --request POST 'http://estuary-testrunner2:8080/test/200'
     --header 'Accept:application/json'
     --header 'Content-Type:text/plain'
     --data 'sleep 3600'"
