added skip_cleanup: true

--- a/.travis.yml
+++ b/.travis.yml
@@ -138,13 +138,13 @@ jobs:
       deploy:
         - provider: script
           script: bash docker_push_tag.sh
-          cleanup: false
+          skip_cleanup: true
           on:
             tags: true
 
         - provider: script
           script: bash docker_push_master.sh
-          cleanup: false
+          skip_cleanup: true
           on:
             branch: master
 
@@ -152,6 +152,6 @@ jobs:
           token: $GITHUB_TOKEN
           file:
             - "main-linux"
-          cleanup: false
+          skip_cleanup: true
           on:
             tags: true
