--- a/.travis.yml
+++ b/.travis.yml
@@ -68,13 +68,7 @@ jobs:
           -v $TRAVIS_BUILD_DIR/inputs/templates:/data
           -v $TRAVIS_BUILD_DIR/inputs/variables:/variables  -e TEMPLATE=standalone.yml
           -e VARIABLES=variables.yml -e DATABASE=mysql56 -e IMAGE=latest
-          --entrypoint python3 dinutac/estuary-discovery:latest /home/dev/scripts/main.py
-
-        - docker run --entrypoint jinja2
-          -v $TRAVIS_BUILD_DIR/inputs/templates:/data
-          -v $TRAVIS_BUILD_DIR/inputs/variables:/variables
-          dinutac/estuary-discovery:latest
-          /data/json.j2 /variables/json.json --format=json
+          --entrypoint python3 dinutac/estuary-discovery:latest /scripts/entities/render.py
 
     #run eureka registration tests
     - language: python
@@ -107,7 +101,7 @@ jobs:
           --data 'sleep 3600'"
         - sleep 20 #wait until deployments are up and running
         - docker ps
-        - docker exec estuary-discovery python3 -m unittest discover /home/dev/scripts/tests/rest_eureka "*_test.py"
+        - docker exec estuary-discovery python3 -m unittest discover /scripts/tests/rest_eureka "*_test.py"
 
     #run docker tests
     - language: python
