added comments for issues with pyinstaller

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,5 @@ flask_cors
 fluent-logger
 Jinja2
 pyinstaller
+# setuptools==44.0.0 #for windows. issues with newer one
+# pypiwin32 #for windows pyinstalller
