--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,5 @@ flask_cors
 fluent-logger
 Jinja2
 pyinstaller
-# setuptools==44.0.0 #for windows. issues with newer one
+setuptools==44.0.0
 # pypiwin32 #for windows pyinstalller
