--- a/.travis.yml
+++ b/.travis.yml
@@ -117,16 +117,19 @@ jobs:
         - docker build -t dinutac/estuary-discovery:latest -f Dockerfile .
         #        - sudo sysctl -w vm.max_map_count=262144
         - docker-compose -f tests/fluentd_efk/docker-compose.yml up --build -d
-        - sleep 100 #wait until efk stack is up and running
+        - sleep 120 #wait until efk stack is up and running
         - docker ps
       script:
         - curl -i http://localhost:8081/about #discovery
         - curl -i --header 'Token:invalidToken' http://localhost:8081/about #discovery unauth
         - curl -i http://localhost:8082/about #testrunner
         - curl -i --header 'Token:invalidToken' http://localhost:8082/about #testrunner unauth
+        - curl -i --header 'Token:None' http://localhost:8083/about #testrunner-java
+        - curl -i --header 'Token:invalidToken' http://localhost:8083/about #testrunner-java unauth
         - sleep 30
         - docker logs estuary-discovery
         - docker logs estuary-testrunner
+        - docker logs estuary-testrunner-java
         - python3 -m unittest discover $SCRIPTS_DIR/fluentd_efk "*_test.py"
 
     #run docker tests
