--- a/tests/fluentd_efk/docker-compose.yml
+++ b/tests/fluentd_efk/docker-compose.yml
@@ -24,19 +24,31 @@ services:
     networks:
       - elastic
 
-  web:
-    image: httpd
+  estuary-testrunner-java:
+    container_name: estuary-testrunner-java
+    image: dinutac/estuary-testrunner-java:latest
+    environment:
+      FLUENTD_IP_PORT: fluentd:24224
+    expose:
+      - "8080"
     ports:
-      - "80:80"
-    links:
-      - fluentd
-    logging:
-      driver: "fluentd"
-      options:
-        fluentd-address: localhost:24224
-        tag: httpd.access
+      - "8083:8080"
     networks:
       - elastic
+
+#  web:
+#    image: httpd
+#    ports:
+#      - "80:80"
+#    links:
+#      - fluentd
+#    logging:
+#      driver: "fluentd"
+#      options:
+#        fluentd-address: localhost:24224
+#        tag: httpd.access
+#    networks:
+#      - elastic
       
   fluentd:
     build: ./fluentd
@@ -50,12 +62,12 @@ services:
     networks:
       - elastic
   
-  apm01:
-    build: ./apm
-    ports:
-      - "8200:8200"
-    networks:
-      - elastic
+#  apm01:
+#    build: ./apm
+#    ports:
+#      - "8200:8200"
+#    networks:
+#      - elastic
   
   es01:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.8.0
@@ -63,8 +75,8 @@ services:
     environment:
       - node.name=es01
       - cluster.name=es-docker-cluster
-      - discovery.seed_hosts=es02
-      - cluster.initial_master_nodes=es01,es02
+#      - discovery.seed_hosts=es02
+      - cluster.initial_master_nodes=es01 #,es02
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
     ulimits:
@@ -77,41 +89,42 @@ services:
       - 9200:9200
     networks:
       - elastic
-  es02:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.8.0
-    container_name: es02
-    environment:
-      - node.name=es02
-      - cluster.name=es-docker-cluster
-      - discovery.seed_hosts=es01
-      - cluster.initial_master_nodes=es01,es02
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-    volumes:
-      - data02:/usr/share/elasticsearch/data
-    networks:
-      - elastic
+
+#  es02:
+#    image: docker.elastic.co/elasticsearch/elasticsearch:7.8.0
+#    container_name: es02
+#    environment:
+#      - node.name=es02
+#      - cluster.name=es-docker-cluster
+#      - discovery.seed_hosts=es01
+#      - cluster.initial_master_nodes=es01,es02
+#      - bootstrap.memory_lock=true
+#      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+#    ulimits:
+#      memlock:
+#        soft: -1
+#        hard: -1
+#    volumes:
+#      - data02:/usr/share/elasticsearch/data
+#    networks:
+#      - elastic
       
-  kib01:
-    image: docker.elastic.co/kibana/kibana:7.8.0
-    container_name: kib01
-    ports:
-      - 5601:5601
-    environment:
-      ELASTICSEARCH_URL: http://es01:9200
-      ELASTICSEARCH_HOSTS: http://es01:9200
-    networks:
-      - elastic
+#  kib01:
+#    image: docker.elastic.co/kibana/kibana:7.8.0
+#    container_name: kib01
+#    ports:
+#      - 5601:5601
+#    environment:
+#      ELASTICSEARCH_URL: http://es01:9200
+#      ELASTICSEARCH_HOSTS: http://es01:9200
+#    networks:
+#      - elastic
 
 volumes:
   data01:
     driver: local
-  data02:
-    driver: local
+#  data02:
+#    driver: local
 
 networks:
   elastic:
