--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,25 +16,25 @@ services:
     expose:
       - "8080"
 
-  estuary-testrunner:
-    image: dinutac/estuary-testrunner:latest
-    hostname: estuary-testrunner
+  estuary-agent:
+    image: dinutac/estuary-agent:latest
+    hostname: estuary-agent
     command: bash -c "sleep 30 && /scripts/main_flask.py"
     environment:
       limit: 'sky' #example env var inserted. you can read it with environ('limit') in your jinja2 template
       EUREKA_SERVER: http://eureka-server:8080/eureka/v2 #your eureka server
-      APP_IP_PORT: estuary-testrunner:8080 #your app details: where it is and on which port. needed for service discovery and spread of tests from the test client
+      APP_IP_PORT: estuary-agent:8080 #your app details: where it is and on which port. needed for service discovery and spread of tests from the test client
     expose:
       - "8080"
 
-  estuary-testrunner2:
-    image: dinutac/estuary-testrunner:latest
-    hostname: estuary-testrunner2
+  estuary-agent2:
+    image: dinutac/estuary-agent:latest
+    hostname: estuary-agent2
     command: bash -c "sleep 30 && /scripts/main_flask.py"
     environment:
       limit: 'sky' #example env var inserted. you can read it with environ('limit') in your jinja2 template
       EUREKA_SERVER: http://eureka-server:8080/eureka/v2 #your eureka server
-      APP_IP_PORT: estuary-testrunner2:8080 #your app details: where it is and on which port. needed for service discovery and spread of tests from the test client
+      APP_IP_PORT: estuary-agent2:8080 #your app details: where it is and on which port. needed for service discovery and spread of tests from the test client
     expose:
       - "8080"
 
