--- a/tests/fluentd_efk/docker-compose.yml
+++ b/tests/fluentd_efk/docker-compose.yml
@@ -12,9 +12,9 @@ services:
     networks:
       - elastic
 
-  estuary-testrunner:
-    container_name: estuary-testrunner
-    image: dinutac/estuary-testrunner:latest
+  estuary-agent:
+    container_name: estuary-agent
+    image: dinutac/estuary-agent:latest
     environment:
       FLUENTD_IP_PORT: fluentd:24224
     expose:
@@ -24,9 +24,9 @@ services:
     networks:
       - elastic
 
-  estuary-testrunner-java:
-    container_name: estuary-testrunner-java
-    image: dinutac/estuary-testrunner-java:latest
+  estuary-agent-java:
+    container_name: estuary-agent-java
+    image: dinutac/estuary-agent-java:latest
     environment:
       FLUENTD_IP_PORT: fluentd:24224
     expose:
