pushing graylog conf

--- a/tests/fluentd_efk/fluentd/conf/fluent.conf
+++ b/tests/fluentd_efk/fluentd/conf/fluent.conf
@@ -8,7 +8,7 @@
   @type copy
   <store>
     @type elasticsearch
-    host es01
+    host elasticsearch
     port 9200
     logstash_format true
     logstash_prefix fluentd
