--- a/.travis.yml
+++ b/.travis.yml
@@ -62,7 +62,7 @@ jobs:
         ISOLATED: true
         NGROK_TOKEN: 1RER6BUC3QNNwYWY5LcIBjrv3A8_24QccmopTEQJGMErG9uzw
         SKIP_ON_VM: true
-        SKIP_ON_DOCKER: true
+        SKIP_ON_CENTOS: true
       before_script:
         - pip3 install -r requirements.txt
         - pyinstaller --onefile main_flask.py
