--- a/Dockerfiles/Dockerfile_centos
+++ b/Dockerfiles/Dockerfile_centos
@@ -3,6 +3,7 @@ FROM centos:8
 ENV TZ UTC
 ENV PORT 8080
 ENV SCRIPTS_DIR /root/app
+ENV CERTS_DIR /root/app/certs
 ENV WORKSPACE $SCRIPTS_DIR
 ENV TEMPLATES_DIR $WORKSPACE/templates
 ENV VARS_DIR $WORKSPACE/variables
@@ -13,6 +14,9 @@ COPY inputs/templates/ $TEMPLATES_DIR/
 COPY inputs/variables/ $VARS_DIR/
 
 COPY main-linux $SCRIPTS_DIR
+
+COPY certs/key.pem $CERTS_DIR/
+COPY certs/cert.pem $CERTS_DIR/
 
 RUN chmod +x $SCRIPTS_DIR/main-linux
 
