--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
           command: python -m unittest discover tests/rest "*_test.py"
           name: "run integration tests"
           environment:
-            REQUESTS_CA_BUNDLE="certs/cert.pem"
+            REQUESTS_CA_BUNDLE: certs/cert.pem
       - store_artifacts:
           path: main-win.exe
 
