parametrized cert and prv key file

--- a/Dockerfiles/Dockerfile_centos
+++ b/Dockerfiles/Dockerfile_centos
@@ -3,7 +3,7 @@ FROM centos:8
 ENV TZ UTC
 ENV PORT 8080
 ENV SCRIPTS_DIR /root/app
-ENV CERTS_DIR /root/app/certs
+ENV HTTPS_DIR /root/app/https
 ENV WORKSPACE $SCRIPTS_DIR
 ENV TEMPLATES_DIR $WORKSPACE/templates
 ENV VARS_DIR $WORKSPACE/variables
@@ -14,9 +14,8 @@ COPY inputs/templates/ $TEMPLATES_DIR/
 COPY inputs/variables/ $VARS_DIR/
 
 COPY main-linux $SCRIPTS_DIR
-
-COPY certs/key.pem $CERTS_DIR/
-COPY certs/cert.pem $CERTS_DIR/
+COPY https/key.pem $HTTPS_DIR/
+COPY https/cert.pem $HTTPS_DIR/
 
 RUN chmod +x $SCRIPTS_DIR/main-linux
 
