--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
           command: python -m unittest discover tests/rest "*_test.py"
           name: "run integration tests"
           environment:
-            CERTS_DIR: certs
+            ENABLE_HTTPS: false
       - store_artifacts:
           path: main-win.exe
 
